# elmafile-filter

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/: dependabot.yml
src/: constants.rs  lev.rs  lgr.rs  lib.rs  rec.rs  shared.rs  state.rs  utils.rs
tests/: lev.rs  lgr.rs  lib.rs  rec.rs  shared.rs  state.rs  test_2.lev  test_2.rec  topology.rs  util.rs  utils.rs
tests/assets/levels/: objects_topology.lev  start_topology_1.lev  topology_intersect_1.lev  topology_intersect_2.lev  topology_intersect_3.lev
tests/levels/: start_topology_2.lev
