[package]
name = "elma"
version = "0.1.13-alpha.0"
authors = ["Roger Andersen <hexjelly@hexjelly.com>"]
description = "Library for reading and writing Elasto Mania files."
homepage = "https://github.com/elmadev/elma-rust"
repository = "https://github.com/elmadev/elma-rust"
documentation = "https://docs.rs/elma/"
readme = "README.md"
keywords = ["ElastoMania", "Elma"]
license = "MIT"

[dependencies]
byteorder = "1"
itertools = "0.7"
nom = "4"
rand = "0.4"
